// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventInventory /> index route should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    event={Object {}}
    isBulkUpdating={false}
    selectedEventIds={Array []}
    startBulkUpdate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Flex
          direction="column"
          height="100%"
>
          <styled.div
                    padding="1.5rem 2rem"
          >
                    <Connect(withSidebarEventHeader)
                              availableInventory={15000}
                              totalInventory={40000}
                    />
                    <styled.div
                              marginTop="1rem"
                    >
                              <EventInventorySeatMap />
                    </styled.div>
          </styled.div>
          <styled.div
                    height="2rem"
          />
          <styled.div
                    padding="0 1rem"
          >
                    <styled.button
                              disabled={true}
                              onClick={[Function]}
                              small={true}
                              title="Update Selected Items"
                    >
                              Bulk Update (
                              0
                               Rows)
                    </styled.button>
          </styled.div>
          <styled.div
                    flex={1}
          >
                    <Connect(VirtualizedEventInventoryPresenter)
                              event={Object {}}
                    />
          </styled.div>
</Flex>,
        <Portal />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              padding="1.5rem 2rem"
>
              <Connect(withSidebarEventHeader)
                            availableInventory={15000}
                            totalInventory={40000}
              />
              <styled.div
                            marginTop="1rem"
              >
                            <EventInventorySeatMap />
              </styled.div>
</styled.div>,
            <styled.div
              height="2rem"
/>,
            <styled.div
              padding="0 1rem"
>
              <styled.button
                            disabled={true}
                            onClick={[Function]}
                            small={true}
                            title="Update Selected Items"
              >
                            Bulk Update (
                            0
                             Rows)
              </styled.button>
</styled.div>,
            <styled.div
              flex={1}
>
              <Connect(VirtualizedEventInventoryPresenter)
                            event={Object {}}
              />
</styled.div>,
          ],
          "direction": "column",
          "height": "100%",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Connect(withSidebarEventHeader)
                  availableInventory={15000}
                  totalInventory={40000}
/>,
                <styled.div
                  marginTop="1rem"
>
                  <EventInventorySeatMap />
</styled.div>,
              ],
              "padding": "1.5rem 2rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "availableInventory": 15000,
                  "totalInventory": 40000,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <EventInventorySeatMap />,
                  "marginTop": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "height": "2rem",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <styled.button
                disabled={true}
                onClick={[Function]}
                small={true}
                title="Update Selected Items"
>
                Bulk Update (
                0
                 Rows)
</styled.button>,
              "padding": "0 1rem",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Bulk Update (",
                  0,
                  " Rows)",
                ],
                "disabled": true,
                "onClick": [Function],
                "small": true,
                "title": "Update Selected Items",
              },
              "ref": null,
              "rendered": Array [
                "Bulk Update (",
                0,
                " Rows)",
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Connect(VirtualizedEventInventoryPresenter)
                event={Object {}}
/>,
              "flex": 1,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "event": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": false,
        },
        "ref": null,
        "rendered": false,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Flex
            direction="column"
            height="100%"
>
            <styled.div
                        padding="1.5rem 2rem"
            >
                        <Connect(withSidebarEventHeader)
                                    availableInventory={15000}
                                    totalInventory={40000}
                        />
                        <styled.div
                                    marginTop="1rem"
                        >
                                    <EventInventorySeatMap />
                        </styled.div>
            </styled.div>
            <styled.div
                        height="2rem"
            />
            <styled.div
                        padding="0 1rem"
            >
                        <styled.button
                                    disabled={true}
                                    onClick={[Function]}
                                    small={true}
                                    title="Update Selected Items"
                        >
                                    Bulk Update (
                                    0
                                     Rows)
                        </styled.button>
            </styled.div>
            <styled.div
                        flex={1}
            >
                        <Connect(VirtualizedEventInventoryPresenter)
                                    event={Object {}}
                        />
            </styled.div>
</Flex>,
          <Portal />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                padding="1.5rem 2rem"
>
                <Connect(withSidebarEventHeader)
                                availableInventory={15000}
                                totalInventory={40000}
                />
                <styled.div
                                marginTop="1rem"
                >
                                <EventInventorySeatMap />
                </styled.div>
</styled.div>,
              <styled.div
                height="2rem"
/>,
              <styled.div
                padding="0 1rem"
>
                <styled.button
                                disabled={true}
                                onClick={[Function]}
                                small={true}
                                title="Update Selected Items"
                >
                                Bulk Update (
                                0
                                 Rows)
                </styled.button>
</styled.div>,
              <styled.div
                flex={1}
>
                <Connect(VirtualizedEventInventoryPresenter)
                                event={Object {}}
                />
</styled.div>,
            ],
            "direction": "column",
            "height": "100%",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Connect(withSidebarEventHeader)
                    availableInventory={15000}
                    totalInventory={40000}
/>,
                  <styled.div
                    marginTop="1rem"
>
                    <EventInventorySeatMap />
</styled.div>,
                ],
                "padding": "1.5rem 2rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "availableInventory": 15000,
                    "totalInventory": 40000,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <EventInventorySeatMap />,
                    "marginTop": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "2rem",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <styled.button
                  disabled={true}
                  onClick={[Function]}
                  small={true}
                  title="Update Selected Items"
>
                  Bulk Update (
                  0
                   Rows)
</styled.button>,
                "padding": "0 1rem",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Bulk Update (",
                    0,
                    " Rows)",
                  ],
                  "disabled": true,
                  "onClick": [Function],
                  "small": true,
                  "title": "Update Selected Items",
                },
                "ref": null,
                "rendered": Array [
                  "Bulk Update (",
                  0,
                  " Rows)",
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Connect(VirtualizedEventInventoryPresenter)
                  event={Object {}}
/>,
                "flex": 1,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "event": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": false,
          },
          "ref": null,
          "rendered": false,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<EventInventory /> index route should render correctly when there are selectedEventIds 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    event={Object {}}
    isBulkUpdating={false}
    selectedEventIds={
        Array [
            1,
            2,
            3,
          ]
    }
    startBulkUpdate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Flex
          direction="column"
          height="100%"
>
          <styled.div
                    padding="1.5rem 2rem"
          >
                    <Connect(withSidebarEventHeader)
                              availableInventory={15000}
                              totalInventory={40000}
                    />
                    <styled.div
                              marginTop="1rem"
                    >
                              <EventInventorySeatMap />
                    </styled.div>
          </styled.div>
          <styled.div
                    height="2rem"
          />
          <styled.div
                    padding="0 1rem"
          >
                    <styled.button
                              disabled={false}
                              onClick={[Function]}
                              small={true}
                              title="Update Selected Items"
                    >
                              Bulk Update (
                              3
                               Rows)
                    </styled.button>
          </styled.div>
          <styled.div
                    flex={1}
          >
                    <Connect(VirtualizedEventInventoryPresenter)
                              event={Object {}}
                    />
          </styled.div>
</Flex>,
        <Portal />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              padding="1.5rem 2rem"
>
              <Connect(withSidebarEventHeader)
                            availableInventory={15000}
                            totalInventory={40000}
              />
              <styled.div
                            marginTop="1rem"
              >
                            <EventInventorySeatMap />
              </styled.div>
</styled.div>,
            <styled.div
              height="2rem"
/>,
            <styled.div
              padding="0 1rem"
>
              <styled.button
                            disabled={false}
                            onClick={[Function]}
                            small={true}
                            title="Update Selected Items"
              >
                            Bulk Update (
                            3
                             Rows)
              </styled.button>
</styled.div>,
            <styled.div
              flex={1}
>
              <Connect(VirtualizedEventInventoryPresenter)
                            event={Object {}}
              />
</styled.div>,
          ],
          "direction": "column",
          "height": "100%",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Connect(withSidebarEventHeader)
                  availableInventory={15000}
                  totalInventory={40000}
/>,
                <styled.div
                  marginTop="1rem"
>
                  <EventInventorySeatMap />
</styled.div>,
              ],
              "padding": "1.5rem 2rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "availableInventory": 15000,
                  "totalInventory": 40000,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <EventInventorySeatMap />,
                  "marginTop": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "height": "2rem",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <styled.button
                disabled={false}
                onClick={[Function]}
                small={true}
                title="Update Selected Items"
>
                Bulk Update (
                3
                 Rows)
</styled.button>,
              "padding": "0 1rem",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Bulk Update (",
                  3,
                  " Rows)",
                ],
                "disabled": false,
                "onClick": [Function],
                "small": true,
                "title": "Update Selected Items",
              },
              "ref": null,
              "rendered": Array [
                "Bulk Update (",
                3,
                " Rows)",
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Connect(VirtualizedEventInventoryPresenter)
                event={Object {}}
/>,
              "flex": 1,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "event": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": false,
        },
        "ref": null,
        "rendered": false,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Flex
            direction="column"
            height="100%"
>
            <styled.div
                        padding="1.5rem 2rem"
            >
                        <Connect(withSidebarEventHeader)
                                    availableInventory={15000}
                                    totalInventory={40000}
                        />
                        <styled.div
                                    marginTop="1rem"
                        >
                                    <EventInventorySeatMap />
                        </styled.div>
            </styled.div>
            <styled.div
                        height="2rem"
            />
            <styled.div
                        padding="0 1rem"
            >
                        <styled.button
                                    disabled={false}
                                    onClick={[Function]}
                                    small={true}
                                    title="Update Selected Items"
                        >
                                    Bulk Update (
                                    3
                                     Rows)
                        </styled.button>
            </styled.div>
            <styled.div
                        flex={1}
            >
                        <Connect(VirtualizedEventInventoryPresenter)
                                    event={Object {}}
                        />
            </styled.div>
</Flex>,
          <Portal />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                padding="1.5rem 2rem"
>
                <Connect(withSidebarEventHeader)
                                availableInventory={15000}
                                totalInventory={40000}
                />
                <styled.div
                                marginTop="1rem"
                >
                                <EventInventorySeatMap />
                </styled.div>
</styled.div>,
              <styled.div
                height="2rem"
/>,
              <styled.div
                padding="0 1rem"
>
                <styled.button
                                disabled={false}
                                onClick={[Function]}
                                small={true}
                                title="Update Selected Items"
                >
                                Bulk Update (
                                3
                                 Rows)
                </styled.button>
</styled.div>,
              <styled.div
                flex={1}
>
                <Connect(VirtualizedEventInventoryPresenter)
                                event={Object {}}
                />
</styled.div>,
            ],
            "direction": "column",
            "height": "100%",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Connect(withSidebarEventHeader)
                    availableInventory={15000}
                    totalInventory={40000}
/>,
                  <styled.div
                    marginTop="1rem"
>
                    <EventInventorySeatMap />
</styled.div>,
                ],
                "padding": "1.5rem 2rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "availableInventory": 15000,
                    "totalInventory": 40000,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <EventInventorySeatMap />,
                    "marginTop": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "2rem",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <styled.button
                  disabled={false}
                  onClick={[Function]}
                  small={true}
                  title="Update Selected Items"
>
                  Bulk Update (
                  3
                   Rows)
</styled.button>,
                "padding": "0 1rem",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Bulk Update (",
                    3,
                    " Rows)",
                  ],
                  "disabled": false,
                  "onClick": [Function],
                  "small": true,
                  "title": "Update Selected Items",
                },
                "ref": null,
                "rendered": Array [
                  "Bulk Update (",
                  3,
                  " Rows)",
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Connect(VirtualizedEventInventoryPresenter)
                  event={Object {}}
/>,
                "flex": 1,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "event": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": false,
          },
          "ref": null,
          "rendered": false,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<EventInventory /> index route should render correctly when there are selectedEventIds and isBulkUpdating is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    event={Object {}}
    isBulkUpdating={true}
    selectedEventIds={
        Array [
            1,
            2,
            3,
          ]
    }
    startBulkUpdate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Flex
          direction="column"
          height="100%"
>
          <styled.div
                    padding="1.5rem 2rem"
          >
                    <Connect(withSidebarEventHeader)
                              availableInventory={15000}
                              totalInventory={40000}
                    />
                    <styled.div
                              marginTop="1rem"
                    >
                              <EventInventorySeatMap />
                    </styled.div>
          </styled.div>
          <styled.div
                    height="2rem"
          />
          <styled.div
                    padding="0 1rem"
          >
                    <styled.button
                              disabled={false}
                              onClick={[Function]}
                              small={true}
                              title="Update Selected Items"
                    >
                              Bulk Update (
                              3
                               Rows)
                    </styled.button>
          </styled.div>
          <styled.div
                    flex={1}
          >
                    <Connect(VirtualizedEventInventoryPresenter)
                              event={Object {}}
                    />
          </styled.div>
</Flex>,
        <Portal>
          <Connect(BulkUpdateModalPresenter)
                    selectedEventIds={
                              Array [
                                        1,
                                        2,
                                        3,
                                      ]
                    }
          />
</Portal>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              padding="1.5rem 2rem"
>
              <Connect(withSidebarEventHeader)
                            availableInventory={15000}
                            totalInventory={40000}
              />
              <styled.div
                            marginTop="1rem"
              >
                            <EventInventorySeatMap />
              </styled.div>
</styled.div>,
            <styled.div
              height="2rem"
/>,
            <styled.div
              padding="0 1rem"
>
              <styled.button
                            disabled={false}
                            onClick={[Function]}
                            small={true}
                            title="Update Selected Items"
              >
                            Bulk Update (
                            3
                             Rows)
              </styled.button>
</styled.div>,
            <styled.div
              flex={1}
>
              <Connect(VirtualizedEventInventoryPresenter)
                            event={Object {}}
              />
</styled.div>,
          ],
          "direction": "column",
          "height": "100%",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Connect(withSidebarEventHeader)
                  availableInventory={15000}
                  totalInventory={40000}
/>,
                <styled.div
                  marginTop="1rem"
>
                  <EventInventorySeatMap />
</styled.div>,
              ],
              "padding": "1.5rem 2rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "availableInventory": 15000,
                  "totalInventory": 40000,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <EventInventorySeatMap />,
                  "marginTop": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "height": "2rem",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <styled.button
                disabled={false}
                onClick={[Function]}
                small={true}
                title="Update Selected Items"
>
                Bulk Update (
                3
                 Rows)
</styled.button>,
              "padding": "0 1rem",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Bulk Update (",
                  3,
                  " Rows)",
                ],
                "disabled": false,
                "onClick": [Function],
                "small": true,
                "title": "Update Selected Items",
              },
              "ref": null,
              "rendered": Array [
                "Bulk Update (",
                3,
                " Rows)",
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Connect(VirtualizedEventInventoryPresenter)
                event={Object {}}
/>,
              "flex": 1,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "event": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(BulkUpdateModalPresenter)
            selectedEventIds={
                        Array [
                                    1,
                                    2,
                                    3,
                                  ]
            }
/>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "selectedEventIds": Array [
              1,
              2,
              3,
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Flex
            direction="column"
            height="100%"
>
            <styled.div
                        padding="1.5rem 2rem"
            >
                        <Connect(withSidebarEventHeader)
                                    availableInventory={15000}
                                    totalInventory={40000}
                        />
                        <styled.div
                                    marginTop="1rem"
                        >
                                    <EventInventorySeatMap />
                        </styled.div>
            </styled.div>
            <styled.div
                        height="2rem"
            />
            <styled.div
                        padding="0 1rem"
            >
                        <styled.button
                                    disabled={false}
                                    onClick={[Function]}
                                    small={true}
                                    title="Update Selected Items"
                        >
                                    Bulk Update (
                                    3
                                     Rows)
                        </styled.button>
            </styled.div>
            <styled.div
                        flex={1}
            >
                        <Connect(VirtualizedEventInventoryPresenter)
                                    event={Object {}}
                        />
            </styled.div>
</Flex>,
          <Portal>
            <Connect(BulkUpdateModalPresenter)
                        selectedEventIds={
                                    Array [
                                                1,
                                                2,
                                                3,
                                              ]
                        }
            />
</Portal>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                padding="1.5rem 2rem"
>
                <Connect(withSidebarEventHeader)
                                availableInventory={15000}
                                totalInventory={40000}
                />
                <styled.div
                                marginTop="1rem"
                >
                                <EventInventorySeatMap />
                </styled.div>
</styled.div>,
              <styled.div
                height="2rem"
/>,
              <styled.div
                padding="0 1rem"
>
                <styled.button
                                disabled={false}
                                onClick={[Function]}
                                small={true}
                                title="Update Selected Items"
                >
                                Bulk Update (
                                3
                                 Rows)
                </styled.button>
</styled.div>,
              <styled.div
                flex={1}
>
                <Connect(VirtualizedEventInventoryPresenter)
                                event={Object {}}
                />
</styled.div>,
            ],
            "direction": "column",
            "height": "100%",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Connect(withSidebarEventHeader)
                    availableInventory={15000}
                    totalInventory={40000}
/>,
                  <styled.div
                    marginTop="1rem"
>
                    <EventInventorySeatMap />
</styled.div>,
                ],
                "padding": "1.5rem 2rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "availableInventory": 15000,
                    "totalInventory": 40000,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <EventInventorySeatMap />,
                    "marginTop": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "2rem",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <styled.button
                  disabled={false}
                  onClick={[Function]}
                  small={true}
                  title="Update Selected Items"
>
                  Bulk Update (
                  3
                   Rows)
</styled.button>,
                "padding": "0 1rem",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Bulk Update (",
                    3,
                    " Rows)",
                  ],
                  "disabled": false,
                  "onClick": [Function],
                  "small": true,
                  "title": "Update Selected Items",
                },
                "ref": null,
                "rendered": Array [
                  "Bulk Update (",
                  3,
                  " Rows)",
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Connect(VirtualizedEventInventoryPresenter)
                  event={Object {}}
/>,
                "flex": 1,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "event": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(BulkUpdateModalPresenter)
              selectedEventIds={
                            Array [
                                          1,
                                          2,
                                          3,
                                        ]
              }
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "selectedEventIds": Array [
                1,
                2,
                3,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
